bug fixed: dark mode and 12hrs

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -29,10 +29,10 @@
 	position: relative;
 	min-height: 100vh;
 	min-width: 100vw;
-	display: grid;
-	grid-template-rows: 8% 84% 8%;
 	background-color: var(--light);
 	color: var(--dark);
+	display: grid;
+	grid-template-rows: 8% 84% 8%;
 	font-family: var(--mainFont);
 }
 
@@ -152,6 +152,29 @@
 
 .btn-dark-gray { background-color: hsl(0 0% 30%); }
 
+@media (prefers-color-scheme: dark) {
+	.app { 
+		background-color: var(--dark);
+		color: var(--light);
+	}
+
+	.modal-container { background-color: var(--dark); }
+
+	.btn-gray { background-color: hsl(0 0% 28%); }
+
+	.modal-container { background-color: hsl(0 0% 30%); }
+	
+}
+
+@media (prefers-color-scheme: light) {
+	.app { 
+		background-color: var(--light);
+		color: var(--dark);
+	}
+
+	.modal-container { background-color: var(--light); }	
+}
+
 .bg-dark { 
 	background-color: var(--dark);
 	color: var(--light);
@@ -160,16 +183,4 @@
 .bg-light {
 	background-color: var(--light);
 	color: var(--dark);
-}
-
-@media (prefers-color-scheme: dark) {
-  * { color: var(--light); }
-
-  .app { background-color: var(--dark); }
-
-  .modal-container { background-color: var(--dark); }
-
-  .btn-gray { background-color: hsl(0 0% 10%); }
-
-  .modal-container { background-color: hsl(0 0% 30%); }
 }
